--- a/public/index.html
+++ b/public/index.html
@@ -1,146 +1,93 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Portal Inmobiliario</title>
-  <style>
-    body { font-family: Arial, sans-serif; padding: 20px; background: #f0f0f0; }
-    h1 { color: #333; }
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Portal Inmobiliario</title>
+<link rel="stylesheet" href="styles.css">
+<style>
+  body { background:#FFF9E5; font-family: Arial, sans-serif; padding:20px; }
+  .banner {
+    background: linear-gradient(90deg,#A6CF3E,#7CC242);
+    color:white; padding:15px 20px; text-align:center; border-radius:10px;
+    display:flex; justify-content:space-between; align-items:center;
+  }
+  .menu { position: relative; display:inline-block; }
+  .dropdown-btn {
+    background:white; color:#7CC242; padding:10px 16px; border:none; border-radius:5px; cursor:pointer;
+  }
+  .dropdown-btn:hover { background:#f0f0f0; }
+  .dropdown-content {
+    display:none; position:absolute; background:white; min-width:200px; box-shadow:0 4px 10px rgba(0,0,0,0.2); border-radius:8px; z-index:1001;
+  }
+  .dropdown-content a {
+    color:#7CC242; padding:12px 16px; text-decoration:none; display:block;
+  }
+  .dropdown-content a:hover { background:#f1f1f1; }
+  .menu:hover .dropdown-content { display:block; }
 
-    #propiedades {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 20px;
-      margin-top: 120px; /* espacio por banner fijo */
-    }
-
-    .propiedad {
-      background: #fff;
-      padding: 20px;
-      border-radius: 10px;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
-      transition: transform 0.2s, box-shadow 0.2s;
-    }
-
-    .propiedad:hover {
-      transform: translateY(-5px);
-      box-shadow: 0 8px 25px rgba(0,0,0,0.15);
-    }
-
-    .propiedad img {
-      width: 100%;
-      height: 200px;
-      object-fit: cover;
-      border-radius: 8px;
-    }
-
-    .propiedad h2 {
-      margin: 10px 0 5px;
-      font-size: 1.2em;
-    }
-
-    .propiedad p {
-      margin: 5px 0;
-    }
-
-    .propiedad .precio {
-      color: #E74C3C;
-      font-weight: bold;
-      font-size: 1.2em;
-    }
-
-    /* 🌈 Banner animado */
-    .banner {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      padding: 15px 20px;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      background: linear-gradient(270deg, #6dd5fa, #2980b9, #6dd5fa);
-      background-size: 400% 400%;
-      animation: gradientMove 10s ease infinite;
-      color: white;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
-      z-index: 1000;
-    }
-
-    @keyframes gradientMove {
-      0% { background-position: 0% 50%; }
-      50% { background-position: 100% 50%; }
-      100% { background-position: 0% 50%; }
-    }
-
-    .banner h1 {
-      margin: 0;
-      font-size: 1.5em;
-    }
-
-    /* Botón Pon tu anuncio */
-    .dropdown-btn {
-      background-color: white;
-      color: #2980b9;
-      padding: 10px 16px;
-      font-size: 1em;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-      transition: background 0.3s;
-    }
-
-    .dropdown-btn:hover {
-      background-color: #f0f0f0;
-    }
-  </style>
+  #propiedades { display:grid; grid-template-columns:repeat(auto-fit,minmax(250px,1fr)); gap:20px; margin-top:20px; }
+  .propiedad { background:white; padding:20px; border-radius:10px; box-shadow:0 4px 10px rgba(0,0,0,0.1); }
+  .propiedad img { width:100%; height:200px; object-fit:cover; border-radius:8px; margin-top:10px; }
+  .propiedad h2 { margin:10px 0 5px; font-size:1.2em; color:#7CC242; }
+  .propiedad p { margin:5px 0; }
+  .propiedad .precio { color:#A6CF3E; font-weight:bold; font-size:1.2em; }
+</style>
 </head>
 <body>
-  <!-- 🌈 Banner animado fijo -->
-  <header class="banner">
-    <h1>Portal Inmobiliario 🏡</h1>
-    <button class="dropdown-btn" onclick="window.location.href='añadir.html'">
-      Pon tu anuncio
-    </button>
-  </header>
 
-  <div id="propiedades"></div>
+<header class="banner">
+  <h1>Portal Inmobiliario 🏡</h1>
+  <div class="menu">
+    <button class="dropdown-btn">Pon tu anuncio ⬇️</button>
+    <div class="dropdown-content">
+      <a href="añadir.html">Añadir propiedad</a>
+      <a href="vender.html" target="_blank">Vender tu casa rápidamente</a>
+      <a href="profesionales.html" target="_blank">Profesionales inmobiliarios</a>
+    </div>
+  </div>
+</header>
 
-  <script>
-    async function cargarPropiedades() {
-      try {
-        const res = await fetch("/propiedades");
-        const propiedades = await res.json();
-        const contenedor = document.getElementById("propiedades");
-        contenedor.innerHTML = "";
+<div id="propiedades"></div>
 
-        if (propiedades.length === 0) {
-          contenedor.innerHTML = "<p>No hay propiedades todavía.</p>";
-          return;
-        }
+<script>
+  async function cargarPropiedades() {
+    try {
+      const res = await fetch("/propiedades");
+      const propiedades = await res.json();
+      const contenedor = document.getElementById("propiedades");
+      contenedor.innerHTML = "";
 
-        propiedades.forEach(p => {
-          const div = document.createElement("div");
-          div.className = "propiedad";
-          div.innerHTML = `
-            <h2>${p.titulo}</h2>
-            <p>${p.descripcion || ""}</p>
-            <p class="precio">${p.precio} €</p>
-            <p><strong>Dirección:</strong> ${p.direccion}</p>
-            ${p.imagen ? `<img src="${p.imagen}" alt="${p.titulo}">` : ""}
-          `;
-          contenedor.appendChild(div);
-        });
-      } catch (err) {
-        console.error("Error cargando propiedades:", err);
+      if(propiedades.length === 0){
+        contenedor.innerHTML = "<p>No hay propiedades todavía.</p>";
+        return;
       }
-    }
 
-    cargarPropiedades();
-  </script>
+      propiedades.forEach(p => {
+        const div = document.createElement("div");
+        div.className = "propiedad";
+        div.innerHTML = `
+          <h2>${p.titulo}</h2>
+          <p>${p.descripcion || ""}</p>
+          <p class="precio">${p.precio} €</p>
+          <p><strong>Dirección:</strong> ${p.direccion || (p.calle + " " + p.numero + ", " + p.localidad)}</p>
+          ${p.imagenes ? p.imagenes.map(img => `<img src="${img}" alt="${p.titulo}">`).join('') : ""}
+        `;
+        contenedor.appendChild(div);
+      });
+    } catch(err) {
+      console.error("Error cargando propiedades:", err);
+    }
+  }
+
+  cargarPropiedades();
+</script>
+
 </body>
 </html>
+
+
+
 
 
 
