Formulario con información útil en viñeta lateral y estilo tipo Idealista

--- a/public/index.html
+++ b/public/index.html
@@ -38,15 +38,11 @@
 
 <header class="banner">
   <h1>Portal Inmobiliario 🏡</h1>
-  <div class="menu">
-    <button class="dropdown-btn">Pon tu anuncio ⬇️</button>
-    <div class="dropdown-content">
-      <a href="añadir.html">Añadir propiedad</a>
-      <a href="vender.html" target="_blank">Vender tu casa rápidamente</a>
-      <a href="profesionales.html" target="_blank">Profesionales inmobiliarios</a>
-    </div>
-  </div>
+  <button onclick="location.href='añadir.html'" class="dropdown-btn">
+    Pon tu anuncio
+  </button>
 </header>
+
 
 <div id="propiedades"></div>
 
