--- a/public/index.html
+++ b/public/index.html
@@ -7,25 +7,9 @@
 <link rel="stylesheet" href="styles.css">
 <style>
   body { background:#FFF9E5; font-family: Arial, sans-serif; padding:20px; }
-  .banner {
-    background: linear-gradient(90deg,#A6CF3E,#7CC242);
-    color:white; padding:15px 20px; text-align:center; border-radius:10px;
-    display:flex; justify-content:space-between; align-items:center;
-  }
-  .menu { position: relative; display:inline-block; }
-  .dropdown-btn {
-    background:white; color:#7CC242; padding:10px 16px; border:none; border-radius:5px; cursor:pointer;
-  }
+  .banner { background: linear-gradient(90deg,#A6CF3E,#7CC242); color:white; padding:15px 20px; text-align:center; border-radius:10px; display:flex; justify-content:space-between; align-items:center; }
+  .dropdown-btn { background:white; color:#7CC242; padding:10px 16px; border:none; border-radius:5px; cursor:pointer; }
   .dropdown-btn:hover { background:#f0f0f0; }
-  .dropdown-content {
-    display:none; position:absolute; background:white; min-width:200px; box-shadow:0 4px 10px rgba(0,0,0,0.2); border-radius:8px; z-index:1001;
-  }
-  .dropdown-content a {
-    color:#7CC242; padding:12px 16px; text-decoration:none; display:block;
-  }
-  .dropdown-content a:hover { background:#f1f1f1; }
-  .menu:hover .dropdown-content { display:block; }
-
   #propiedades { display:grid; grid-template-columns:repeat(auto-fit,minmax(250px,1fr)); gap:20px; margin-top:20px; }
   .propiedad { background:white; padding:20px; border-radius:10px; box-shadow:0 4px 10px rgba(0,0,0,0.1); }
   .propiedad img { width:100%; height:200px; object-fit:cover; border-radius:8px; margin-top:10px; }
@@ -38,11 +22,8 @@
 
 <header class="banner">
   <h1>Portal Inmobiliario 🏡</h1>
-  <button onclick="location.href='añadir.html'" class="dropdown-btn">
-    Pon tu anuncio
-  </button>
+  <button onclick="location.href='añadir.html'" class="dropdown-btn">Pon tu anuncio</button>
 </header>
-
 
 <div id="propiedades"></div>
 
@@ -62,12 +43,19 @@
       propiedades.forEach(p => {
         const div = document.createElement("div");
         div.className = "propiedad";
+
+        // Si hay imagen, la tomamos de /uploads
+        let imgHTML = '';
+        if(p.imagen) {
+          imgHTML = `<img src="/uploads/${p.imagen}" alt="${p.titulo}">`;
+        }
+
         div.innerHTML = `
           <h2>${p.titulo}</h2>
           <p>${p.descripcion || ""}</p>
           <p class="precio">${p.precio} €</p>
-          <p><strong>Dirección:</strong> ${p.direccion || (p.calle + " " + p.numero + ", " + p.localidad)}</p>
-          ${p.imagenes ? p.imagenes.map(img => `<img src="${img}" alt="${p.titulo}">`).join('') : ""}
+          <p><strong>Dirección:</strong> ${p.direccion}</p>
+          ${imgHTML}
         `;
         contenedor.appendChild(div);
       });
@@ -81,6 +69,7 @@
 
 </body>
 </html>
+
 
 
 
